midterm backups/vm3 (pri)/iptables
# Generated by iptables-save v1.8.4 on Thu Nov 19 02:53:24 2020
*raw
:PREROUTING ACCEPT [5359:400017]
:OUTPUT ACCEPT [3601:362047]
COMMIT
# Completed on Thu Nov 19 02:53:24 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 02:53:24 2020
*mangle
:PREROUTING ACCEPT [5359:400017]
:POSTROUTING ACCEPT [3601:362047]
:INPUT ACCEPT [5357:399361]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3601:362047]
COMMIT
# Completed on Thu Nov 19 02:53:24 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 02:53:24 2020
*nat
:PREROUTING ACCEPT [14:2330]
:INPUT ACCEPT [14:2330]
:POSTROUTING ACCEPT [115:8487]
:OUTPUT ACCEPT [115:8487]
COMMIT
# Completed on Thu Nov 19 02:53:24 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 02:53:24 2020
*filter
:INPUT ACCEPT [1836:141318]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3463:345892]
:LOGGING - [0:0]
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOGGING
-A INPUT -j LOGGING
-A LOGGING -p tcp -m tcp --dport 22 -j LOG
-A LOGGING -j LOG
-A LOGGING -p tcp -m tcp --dport 22 -j DROP
-A LOGGING -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 19 02:53:24 2020
